# score-addon-synthimi

./: .clang-format  CMakeLists.txt  README.md  addon.json  release.sh  score_addon_synthimi.cpp  score_addon_synthimi.hpp  synthimi.qrc
.github/workflows/: builds.yaml  jit.yml
Synthimi/: Synthimi.hpp  SynthimiModel.cpp  SynthimiModel.hpp  SynthimiUi.hpp
